--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -9,10 +9,7 @@ spring:
   profiles: dev
   application:
     name: microservicecloud-config-client
-eureka:
-  client:
-    server-url:
-      defaultZone: http://eureka-dev.com:7001/eureka/
+
 ---
 server:
   port: 8202
@@ -23,4 +20,4 @@ spring:
 eureka:
   client:
     server-url:
-      defaultZone: http://eureka-dev.com:7001/eureka/
+      defaultZone: http://eureka-test.com:7001/eureka/
