--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -9,6 +9,10 @@ spring:
   profiles: dev
   application:
     name: microservicecloud-config-client
+eureka:
+  client:
+    server-url:
+      defaultZone: http://eureka-dev.com:7001/eureka/
 
 ---
 server:
